Update Managers for Java 17 + Fucking Folia support :)